part1/my-kubectl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-kubectl-pod
spec:
  serviceAccountName: my-service-account
  containers:
  - name: kubectl
    image: bitnami/kubectl
    command: ["sh","-c","sleep 1000"]
