part1/my-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-set
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
